<resources>
    <string name="app_name">Storage</string>
    <string name="button1_text">Shared Preferences</string>
    <string name="button2_text">Files</string>
    <string name="button3_text">SQLite</string>
    <string name="textView_text">This is the stored string.</string>
    <string name="textView2_text">Enter text to be stored using Shared Preferences in the text box below:</string>
    <string name="IStextView2_text">Enter text to be stored using Internal Storage in the text box below:</string>
    <string name="EStextView2_text">Enter text to be stored using External Storage in the text box below:</string>
    <string name="button4_text">Save</string>
    <string name="button5_text">Internal storage</string>
    <string name="button6_text">External storage</string>
</resources>
